--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,83 +1,26 @@
-# Development environment dependencies
-# Install with: pip install -r requirements-dev.txt
+# Девелоперские зависимости
+# Использование: pip install -r requirements-dev.txt
 
-# Core dev tools
-pip>=23.0
-setuptools>=68.0.0
-wheel>=0.41.0
+-r requirements-prod.txt
 
-# Linting & Formatting
-ruff>=0.1.8                # Fast Python linter + formatter (replaces flake8, black, isort)
-black>=23.12.0             # Code formatter (optional if using ruff format)
-isort>=5.13.0              # Import sorting
-mypy>=1.8.0                # Static type checking
-types-requests>=2.31.0.20240106
-types-pyyaml>=6.0.12.20240107
+# Отладка
+debugpy>=1.6.0,<2.0.0
+ipython>=8.14.0,<9.0.0
+ipdb>=0.13.0,<0.14.0
 
-# Testing
-pytest>=7.4.0
-pytest-asyncio>=0.21.1
-pytest-cov>=4.1.0          # Coverage reporting
-pytest-mock>=3.12.0        # Mocking
-httpx-mock>=0.10.0         # HTTP mocking
-responses>=0.24.0          # Legacy request mocking
-factory-boy>=3.3.0         # Test data generation
+# Линтеры и форматирование
+ruff>=0.1.0,<0.2.0
+black>=23.7.0,<24.0.0
+isort>=5.12.0,<6.0.0
+mypy>=1.5.0,<2.0.0
+types-requests>=2.31.0,<3.0.0
+types-PyYAML>=6.0.0,<7.0.0
 
-# Security & Dependency Scanning
-bandit>=1.7.6              # Security vulnerability scanner
-safety>=2.3.5              # Checks for known CVEs in deps
-pip-audit>=0.2.1           # Alternative CVE scanner
-dependency-check>=9.0.0    # OWASP dependency checker (CLI tool, optional)
+# Документация
+sphinx>=7.2.0,<8.0.0
+sphinx-rtd-theme>=1.3.0,<2.0.0
+sphinx-autodoc-typehints>=1.24.0,<2.0.0
 
-# Debugging & Profiling
-ipython>=8.18.0
-pdbpp>=0.10.3              # Enhanced debugger
-py-spy>=0.3.14             # Sampling profiler for Python
-memory-profiler>=0.61.0    # Memory usage analysis
-objgraph>=3.5.0            # Object reference graph debugging
-
-# Documentation
-mkdocs>=1.5.3
-mkdocstrings[python]>=0.24.0
-mkdocs-material>=9.5.0
-pdoc>=14.2.0               # Alternative: auto API docs
-sphinx>=7.2.6              # For advanced docs (optional)
-
-# Code Quality & Metrics
-radon>=6.0.1               # Cyclomatic complexity, maintainability
-vulture>=2.11              # Dead code detection
-dodgy>=0.2.1               # Finds suspicious code patterns
-
-# Environment & Reproducibility
-pip-tools>=7.4.0           # Lockfile generation (pip-compile)
-virtualenv>=20.25.0
-poetry>=1.7.0              # Optional: alternative dependency management
-
-# Pre-commit hooks
-pre-commit>=3.5.0
-
-# Monitoring & DevOps Helpers
-docker>=7.0.0              # Docker SDK for Python
-kubernetes>=29.0.0         # If deploying to K8s
-boto3>=1.34.0              # AWS integration testing
-google-cloud-storage>=2.14.0  # GCP testing
-
-# AI/ML Dev Tools
-jupyter>=1.0.0
-notebook>=7.0.0
-mlflow>=2.9.0              # Experiment tracking
-wandb>=0.16.0              # Weights & Biases (optional)
-
-# Local Database Tools (for dev only)
-sqlite-utils>=3.35.0
-mongomock>=4.1.2           # Mock MongoDB for tests
-psycopg2-binary>=2.9.9     # Already in prod, but repeated for clarity
-
-# Hot Reload & Dev Server
-watchdog>=3.0.0            # File system monitoring
-hupper>=2.0.0              # Process reloader (like in Flask)
-
-# Type Stub Packages (for better IDE support)
-types-aiofiles>=23.2.0.20240106
-types-redis>=5.0.0.20240107
-types-PyYAML>=6.0.12.20240107
+# Профилирование
+py-spy>=0.3.14,<0.4.0
+memory-profiler>=0.61.0,<0.62.0
