--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -1,41 +1,25 @@
-# GPU-accelerated dependencies for AI Freelance Automation
-# Designed for NVIDIA GPUs with CUDA 12.1+
-# Install AFTER requirements.txt: pip install -r requirements-gpu.txt
+# Зависимости для работы с GPU и тяжелыми ML моделями
+# Использование:
+#   pip install -r requirements-base.txt
+#   pip install -r requirements-gpu.txt
 
-# Core AI Frameworks (GPU-optimized)
-torch>=2.1.0,<2.3.0 --index-url https://download.pytorch.org/whl/cu121
-torchvision>=0.16.0,<0.18.0 --index-url https://download.pytorch.org/whl/cu121
-torchaudio>=2.1.0,<2.3.0 --index-url https://download.pytorch.org/whl/cu121
+-r requirements-base.txt
 
-# Hugging Face Ecosystem (GPU-aware)
-transformers>=4.35.0,<5.0
-accelerate>=0.25.0         # Enables multi-GPU and mixed-precision
-bitsandbytes>=0.41.0       # 4-bit/8-bit quantization for LLMs
-optimum>=1.15.0            # Optimization for inference (ONNX, etc.)
-sentence-transformers>=2.2.2
+# PyTorch с CUDA поддержкой
+torch>=2.0.0,<2.2.0 --index-url https://download.pytorch.org/whl/cu118
+torchvision>=0.15.0,<0.17.0 --index-url https://download.pytorch.org/whl/cu118
+torchaudio>=2.0.0,<2.2.0 --index-url https://download.pytorch.org/whl/cu118
 
-# Speech & Transcription (GPU-accelerated)
-openai-whisper>=20231117   # Official Whisper with CUDA support
-faster-whisper>=1.0.0      # Even faster CPU/GPU Whisper implementation
+# Transformers и сопутствующие
+transformers>=4.30.0,<5.0.0
+accelerate>=0.21.0,<0.23.0
+bitsandbytes>=0.41.0,<0.42.0  # Для квантования 8-bit/4-bit
+sentence-transformers>=2.2.0,<3.0.0
+peft>=0.4.0,<0.6.0  # Parameter-Efficient Fine-Tuning
 
-# Large Language Models (Local + GPU)
-llama-cpp-python>=0.2.57 --extra-index-url https://pypi.org/simple/ --no-cache-dir
-# For GPU support in llama-cpp-python, install via:
-# CMAKE_ARGS="-DLLAMA_CUBLAS=on" FORCE_CMAKE=1 pip install llama-cpp-python --no-cache-dir
+# Аудио обработка
+librosa>=0.10.0,<0.11.0
+soundfile>=0.12.0,<0.13.0
 
-# Vision & Multimodal (if needed for future expansion)
-diffusers>=0.25.0
-invisible-watermark>=0.2.0
-
-# Performance & Memory Optimization
-xformers>=0.0.23.post1     # Memory-efficient attention (for transformers)
-flash-attn>=2.3.0          # Ultra-fast attention (optional, requires build)
-
-# GPU Monitoring & Debugging
-nvidia-ml-py>=12.535.133   # NVML bindings for GPU monitoring
-gpustat>=1.1.1             # CLI GPU status (useful for health_monitor)
-
-# Compatibility Layer
-cuda-python>=12.2.0        # Official CUDA Python bindings (optional but recommended)
-
-# Note: Do NOT install tensorflow or jax unless explicitly needed — they may conflict with PyTorch
+# Опционально для продвинутой оптимизации
+xformers>=0.0.20,<0.0.22  # Эффективные трансформеры для GPU
