--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -1,83 +1,19 @@
-# Production dependencies for AI Freelance Automation System
-# Optimized for security, stability, and performance in 24/7 autonomous operation
-# Install with: pip install -r requirements-prod.txt
+# Продакшн-зависимости (без девелоперских инструментов)
+# Использование: pip install -r requirements-prod.txt
 
-# === Core Runtime ===
-python>=3.10,<3.13
-pip>=23.0
+-r requirements-base.txt
 
-# === Async & Concurrency (High-performance I/O) ===
-aiohttp>=3.9.0,<4.0
-aiofiles>=23.2.1
-uvloop>=0.19.0; sys_platform != "win32"
-async-timeout>=4.0.3
+# Продакшн-сервер
+gunicorn>=21.2.0,<22.0.0
+uvloop>=0.17.0,<0.18.0
+httptools>=0.5.0,<0.6.0
 
-# === Configuration & Dependency Injection ===
-pydantic>=2.5.0,<3.0
-pyyaml>=6.0
-dependency-injector>=4.41.0
+# Мониторинг
+prometheus-client>=0.17.0,<0.18.0
+sentry-sdk[fastapi]>=1.30.0,<2.0.0
 
-# === AI & Machine Learning (Minimal but complete) ===
-torch>=2.1.0,<2.3.0               # CPU version by default; GPU via requirements-gpu.txt
-transformers>=4.35.0,<5.0
-sentence-transformers>=2.2.2
-openai>=1.10.0
-anthropic>=0.20.0
-google-generativeai>=0.4.0
-whisper>=1.1.10                   # For transcription fallback
-llama-cpp-python>=0.2.57          # Local LLM support (CPU/GPU)
+# Кэширование
+aiocache>=0.12.0,<0.13.0
 
-# === NLP & Multilingual ===
-spacy>=3.7.0
-language-tool-python>=2.7.1
-langdetect>=1.0.9
-
-# === Security & Cryptography (FIPS-compliant where possible) ===
-cryptography>=41.0.0
-argon2-cffi>=23.1.0
-python-jose[cryptography]>=3.3.0
-pyotp>=2.9.0
-tink>=1.8.0                       # Google's cryptographic library (AES-GCM, etc.)
-
-# === Web & Platform Integration ===
-httpx>=0.26.0                     # Modern async HTTP client
-requests>=2.31.0                  # Sync fallback
-beautifulsoup4>=4.12.0
-playwright>=1.40.0                # Reliable browser automation for platforms
-
-# === Payment Processing ===
-stripe>=5.0.0
-paypalrestsdk>=1.13.1
-yoomoney>=0.3.0
-web3>=6.10.0                      # Crypto payments (ETH, etc.)
-
-# === Data Storage & Caching ===
-redis>=5.0.0
-pymongo>=4.6.0
-psycopg2-binary>=2.9.9
-sqlalchemy>=2.0.25
-aiocache>=0.12.3
-
-# === Monitoring & Observability ===
-prometheus-client>=0.19.0
-opentelemetry-api>=1.22.0
-opentelemetry-sdk>=1.22.0
-sentry-sdk>=1.40.0                # Error tracking with PII scrubbing
-
-# === Logging & Reliability ===
-structlog>=23.2.0
-loguru>=0.7.2
-
-# === Media & File Processing ===
-pydub>=0.25.1
-moviepy>=1.0.3                    # Lightweight video/audio processing
-Pillow>=10.1.0
-
-# === Self-Healing & Resilience ===
-tenacity>=8.2.3                   # Retry with exponential backoff
-schedule>=1.2.0
-deepdiff>=6.7.1                   # State comparison for recovery
-
-# === Utilities ===
-python-dotenv>=1.0.0
-jsonschema>=4.20.0                # Config validation
+# Очереди задач
+celery[redis]>=5.3.0,<6.0.0
